src/test/ui/if/ifmt-unimpl.rs
fn main() {
    format!("{:X}", "3");
    //~^ ERROR: `str: std::fmt::UpperHex` is not satisfied
}
